Fixed overlapping subtle notifications on Mac.

Can happen when a fullscreen/pointer-lock bubble and a new-back-shortcut
bubble are visible at the same time. Now the new bubble will dismiss the
old bubble (which is the behaviour on Views platforms).

BUG=615971

Review-Url: https://codereview.chromium.org/2028963002
Cr-Commit-Position: refs/heads/master@{#397973}

Former-commit-id: e1ec367efc1eeae3ba9fcb7309d4e0be44e6c44f