chrome/browser/ui/cocoa/browser/exclusive_access_controller_views.mm
@@ -34,10 +34,16 @@ ExclusiveAccessController::ExclusiveAccessController(
 ExclusiveAccessController::~ExclusiveAccessController() {}
 
 void ExclusiveAccessController::Show() {
+  // Hide the backspace shortcut bubble, to avoid overlapping.
+  new_back_shortcut_bubble_.reset();
+
   views_bubble_.reset(new ExclusiveAccessBubbleViews(this, url_, bubble_type_));
 }
 
 void ExclusiveAccessController::ShowNewBackShortcutBubble(bool forward) {
+  // Hide the exclusive access bubble, to avoid overlapping.
+  views_bubble_.reset();
+
   if (new_back_shortcut_bubble_)
     new_back_shortcut_bubble_->UpdateContent(forward);
   else
